Fix File View scrollbars

--- a/src/app/components/file-view/file-list.component.scss
+++ b/src/app/components/file-view/file-list.component.scss
@@ -4,7 +4,6 @@
   margin: 20px;
   box-sizing: border-box;
   width: 100%;
-  overflow: auto;
 
 
   .title {
@@ -84,7 +83,12 @@
       }
 
       .label {
-        display: inline-block;
+        display: block;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        min-width: 150px;
+        width: 100%;
+        padding-right: 20px;
       }
 
       .btn-add {
