--- a/src/app/components/file-view/file-view.component.scss
+++ b/src/app/components/file-view/file-view.component.scss
@@ -19,4 +19,5 @@
   color: #9ba5b4;
   background-color: #282c34;
   border: 1px solid #181a1f;
+  overflow: auto;
 }
